--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -1,4 +1,20 @@
 <!doctype html>
+
+<style>
+  .body{
+    background-color: #191414; 
+    color: #fff;
+    margin-left: 230px; /* Same as the width of the sidebar */
+    padding: 0px 10px;
+    }
+  .greenbox{
+    background-color:#1db954;
+    border-radius: 18px;
+    width: 400px;
+    height: 270px;
+  }
+</style>
+
 <html>
   <head>
     <title>Spotify Statistics</title>
@@ -14,17 +30,52 @@
         width: 500px;
       }
       .center-image{
-        width: 200px;
-        height: 200px;
         border-radius: 50%;
+        width:150px;
+        height: 150px;
+      }
+      /* The sidebar menu */
+      .sidenav {
+        height: 100%; /* Full-height: remove this if you want "auto" height */
+        width: 230px; /* Set the width of the sidebar */
+        position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+        z-index: 1; /* Stay on top */
+        top: 0; /* Stay at the top */
+        left: 0;
+        background-color: #1db954; /* Black */
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 20px;
+      }
+
+      /* The navigation menu links */
+      .sidenav a {
+        padding: 6px 8px 6px 16px;
+        text-decoration: none;
+        font-size: 25px;
+        color: #f1f1f1;
+        display: block;
+      }
+
+      /* When you mouse over the navigation links, change their color */
+      .sidenav a:hover {
+        color: #d6d6d6 ;
+      }
+
+      /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+      @media screen and (max-height: 450px){
+        .sidenav {padding-top: 15px;}
+        .sidenav a {font-size: 18px;}
       }
     </style>
   </head>
 
-  <body>
+  
+  <!-- Page content -->
+  <div class="main">
+  </div>
+  <body class = "body">
     <div class="container">
       <div id="login">
-        <h1>This is an example of the Authorization Code flow</h1>
         <a href="/login" class="btn btn-primary">Log in with Spotify</a>
       </div>
       <div id="loggedin">
@@ -34,37 +85,44 @@
         </div>
         <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
       </div>
-      <div class="container" id="following">
-        <h3>Following</h3>
-      </div>
-      <div class="container" id="tracks">
-        <h3>Top Tracks</h3>
-      </div>
+          <div class="container" style = "color: #2e2e2e"id="following">
+               <h3>Following</h3>
+             </div>
+             <div class="container" style = "color: #2e2e2e" id="tracks">
+               <h3>Top Tracks</h3>
+             </div>
       </div>
     </div>
 
     <script id="user-profile-template" type="text/x-handlebars-template">
-      <h1>{{display_name}}</h1>
-      <div class="media">
-        <div class="pull-left">
-          <img class="center-image" width="150" src="{{images.0.url}}" />
-        </div>
-        <div class="media-body" style="margin-top: 35px">
-          <dl class="dl-horizontal">
-            <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
-            <dt>Id</dt><dd>{{id}}</dd>
-            <dt>Email</dt><dd>{{email}}</dd>
-            <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
-            <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
-            <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
-            <dt>Country</dt><dd>{{country}}</dd>
-          </dl>
+     <div class="sidenav">
+      <div>
+        <h1 style = "position: relative; text-align:center; vertical-align: middle; margin-top: 0; ">SpotiRy</h1>
+        <div class="media" style = "position: relative; text-align:center; vertical-align: middle; padding-top: 13px; margin-bottom: 10px; background-color: #1ba54b;">
+            <img class="center-image" width="150" src="{{images.0.url}}" />
+            <h3 style = "position: relative; text-align:center; vertical-align: middle; margin-top: 5px;">{{display_name}}</h3>
+
         </div>
       </div>
+      <a href="#">Interests</a>
+      <a href="#">Queue Creator</a>
+      <a href="#">Clients</a>
+      <a href="#">Contact</a>
+    </div>
 
+      <div class="media-body" style="margin-top: 35px">
+        <dl class="dl-horizontal">
+          <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
+          <dt>Id</dt><dd>{{id}}</dd>
+          <dt>Email</dt><dd>{{email}}</dd>
+          <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
+          <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
+          <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
+          <dt>Country</dt><dd>{{country}}</dd>
+          <dt><a href="/html/queue-creator.html"class="btn btn-primary">Queue Creator</a></dt>
+        </dl>
+      </div>
     </script>
-
-
 
     <script id="following-template" type="text/x-handlebars-template">
       <h2>Followed artists</h2>
