--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -135,11 +135,18 @@ button:focus {outline:0;}
     </div>
     <div style = "margin: auto; width: 70%; background-color: #1f1f1f; border-width: 3px; border-radius: 14px; border-color: #252525 ;";  class="panel panel-default">
       <div style = "color: #b3b3b3; font-size: 15px;font-weight: bold;" class="panel-body">
+        <div style = "display: inline-block; width: 45%; margin-bottom: 10px;">
+          <img style = "border-radius: 14px; width: 100%" src="./images/interestimg.png"></img>
+          <h4 style = "text-align: center; font-size: 20px;" class = "infotext">Explore your listening habits</h4>
+        </div>
+        <div style = "width: 45%; float:right; margin-bottom: 10px;">
+          <img style = "border-radius: 14px; width: 100%" src="./images/queueimg.png"></img>
+          <h4 style = "text-align: center; font-size: 20px;" class = "infotext">Quickly create queues of songs you love!</h4>
+        </div>
+
             <div style = " width: 90%; margin: auto;text-align: center;">
-              <h3 style = "font-size: 32px;" class = "infotext">Queue Creator</h3>
-              <h4 class = "infotext">4 recomended songs are generated</h4>
-              <h4 class = "infotext">when you click a song it adds it to your queue every time you pick a song</h4>
-              <h4 class = "infotext">4 new songs are generated, this allows you to quickly generate a queue of songs you truly enjoy</h4>
+              <h3 style = "font-size: 32px;" class = "infotext">Summary</h3>
+              <h4 tyle = "font-weight: normal; class = "infotext">SpotiRy is a website that uses Spotify API to create tools that will improve your spotify experience. It allows you to view your spotify usage statistics and quickly generate queues from a selection of hand picked songs based on your music history</h4>
             </div>
           </div>
           <a style = "background-color: #1db954; border-color: #1db954;margin: auto; margin-bottom: 20px;display: block; text-align: center; width: 150px; align-items: center;"href="/login" class="btn btn-primary">Log in with Spotify</a>
@@ -161,7 +168,7 @@ button:focus {outline:0;}
             <a style = "cursor: pointer;"id="queueCreatorButton">Queue Creator</a>
             <div style = "margin-top: 20px; background-color: #1f1f1f; width: 90%;border-width: 3px; border-radius: 14px; border-color: #252525 ;">
               <a style = "color: white; font-weight: bold; padding-bottom: 0px; padding-top: 0px">Coming Soon</a>
-              <a style = " cursor: pointer;padding-bottom: 0px; padding-top: 0px">Recommended</a>
+              <a style = "cursor: pointer;padding-bottom: 0px; padding-top: 0px">Recommended</a>
               <a style = "cursor: pointer;padding-bottom: 3px; padding-top: 0px">Music Quiz</a>
             </div>
           </div>
